welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:5: error: not found: value flase
    return flase;
           ^